--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.2.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "jest-environment-jsdom": "^28.1.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/styled-components": "^5.1.25",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "jest": "^28.1.1",
     "typescript": "4.7.3"
   }
 }
